# CobraML2

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  MANIFEST.in  README.md  build.sh  docker-compose.yml  local_run.sh  pyproject.toml  runner.sh  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_ampere.cu  benchmark_gemv.cpp  benchmark_matrix.cpp  eq_cuda.cpp  gemm_cuda.cpp  gemv_cuda.cpp
include/: barray.h  brarray.cuh  brarray.h  context.h  enums.h  gemm_dispatcher.cuh  layout_add.cuh  matrix.h  tensor.h
include/cobraml2/: algos.cuh  macros.cuh  utilities.cuh
include/cobraml2/kernels/: fmha_cc.cuh  matmul_fp4.cuh  mha.cuh  mha_cc.cuh  mha_cute.cuh  mha_naive.cuh
include/cobraml2/structures/: configs.cuh  load.cuh  pipelines.cuh  storage.cuh
include/cobraml2/structuring/: TileWriter.cuh
include/helpers/: utils.h
include/kernels/: naive_matmul.cuh
include/kernels/ampere/: gemm.cuh
include/kernels/blackwell/: gemm.cuh
include/kernels/lovelace/: copy_builder.h  gemm.cuh
python/: pyproject.toml  setup.py
python/cobraml/: __init__.py  ops.py
python/cobraml/layers/: __init__.py  attention.py  mlp.py
python/cobraml/models/: __init__.py  config.py  gpt2.py  sampling.py  weights.py
python/cobraml/utils/: __init__.py  hf.py
python/csrc/: fmha_binding.cu
python/tests/: conftest.py  temp.py  test_fmha.py
python/tests/layers/: test_attention.py
python/tests/models/: test_gpt2-xl.py  test_sampling.py
scripts/: docker-dev.sh
src/: allocator.cpp  allocator.h  barray.cpp  brarray.cpp  enums.cpp  instantiate.h  math_dis.cpp  math_dis.h  matrix.cpp  tensor.cpp
src/autograd/: computation_graph.cpp  computation_graph.h
src/autograd/layers/: element_wise.cpp  element_wise.h  multiply.cpp  multiply.h
src/cuda_standard_kernel/: cuda_allocator.cpp  cuda_allocator.h  cuda_device_helpers.cuh  cuda_helpers.cpp  cuda_helpers.h  cuda_math.cpp  cuda_math.h  eq.cu  gemm.cu  gemv.cu
src/standard_kernel/: eq.cpp  gemm.cpp  standard_allocator.cpp  standard_allocator.h  standard_math.cpp  standard_math.h
tests/: CMakeLists.txt  test_barray.cpp  test_brarray.cpp  test_brarray.cu  test_brarray_gpu.cpp  test_cpu_math.cpp  test_enums.cpp  test_example.cu  test_fmha_cc.cu  test_gemm_sm100.cu  test_matrix.cpp  test_mha.cu  test_mha_cute.cu  test_mha_naive.cu  test_tensor.cpp
tests/include/test_common/: initialize.cuh  mha.cuh
tests/temp/: launch.cu  test.cpp  test.h
